[package]
name = "nix-mirror"
version = "0.1.0"
authors = ["user <user@example.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
futures = "0.3.12"
indicatif = "0.15.0"
structopt = "0.3.21"
xz2 = "0.1.6"
path-clean = "0.1.0"
tempfile = "3.2.0"
nix-base32 = "0.1.1"
sha2 = "0.9.3"

[dependencies.tokio]
version = "1.2.0"
features = [ "fs", "macros", "rt-multi-thread" ]

[dependencies.reqwest]
version = "0.11"
features = [ "stream" ]
